--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-ui-animate": "^2.0.0",
     "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.5",
+    "styled-components-carousel": "^0.2.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
