--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
@@ -19,7 +20,6 @@
     "react-ui-animate": "^2.0.0",
     "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.5",
-    "styled-components-carousel": "^0.2.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
