header options effect

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "boni-portifolio",
   "version": "0.1.0",
+  "homepage": "https://bonieasy.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -26,7 +27,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
